--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "swiper": "^6.8.4",
+    "vue": "^3.2.45",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
