--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "swiper": "^6.8.4",
     "vue": "^3.2.45",
     "vue-router": "^4.0.3",
+    "vue-simple-range-slider": "^1.0.0",
+    "vue3-carousel": "^0.2.9",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
